Attempt to make mkgrd img fixed on mobile ios

--- a/src/style.css
+++ b/src/style.css
@@ -20,11 +20,27 @@
   background-color: rgba(32, 29, 29, 0.5);
 }
 
+body:before {
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url(./images/cauldron.png) no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
-  background-image: url(./images/cauldron.png);
+/*  background-image: url(./images/cauldron.png);
   background-attachment: fixed;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   background-color: rgb(32, 29, 29);
 }
 
